fix text in license being black in dark mode

--- a/css/light.scss
+++ b/css/light.scss
@@ -40,6 +40,10 @@ label, input {
 	color: #212529;
 }
 
+p {
+	color: rgba(0, 0, 0, .6);
+}
+
 #SearchBar {
 	color: #fff;
 }
