--- a/css/main.scss
+++ b/css/main.scss
@@ -1434,9 +1434,6 @@ footer, footer p {
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
   font-weight: 300
 }
-p {
-	color: rgba(0, 0, 0, .6)
-}
 img:not(.img-gallery) {
   max-width: 100%;
   height: auto;
